--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -25,4 +26,26 @@
 
 :where(.css-dev-only-do-not-override-m4timi).ant-select-single {
   height: 44px;
+}
+.result_heading {
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  width: 20%;
+}
+
+#result_sit_naming {
+  font-weight: 600;
+  width: 50%;
+}
+
+#result_sit_naming_value {
+  width: 50%;
+  text-transform: capitalize;
+}
+
+#result_sit_naming_div {
+  display: flex;
+  justify-content: space-between;
 }
