--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  width: 20%;
+  width: 40%;
 }
 
 #result_sit_naming {
@@ -48,4 +48,27 @@
 #result_sit_naming_div {
   display: flex;
   justify-content: space-between;
+}
+
+:where(.css-dev-only-do-not-override-m4timi).ant-table-wrapper table {
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0 !important;
+}
+
+:where(.css-dev-only-do-not-override-m4timi).ant-table-wrapper
+  .ant-table-container
+  table
+  > thead
+  > tr:first-child
+  > *:first-child {
+  border-radius: 0;
+}
+
+:where(.css-dev-only-do-not-override-m4timi).ant-table-wrapper
+  .ant-table-container
+  table
+  > thead
+  > tr:first-child
+  > *:last-child {
+  border-radius: 0;
 }
