--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -1,30 +1,47 @@
 .login_d {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .login_img {
-  height: 80%;
-  display: flex;
-  align-items: center;
+    height: 80%;
+    display: flex;
+    align-items: center;
 }
 
 :where(.css-dev-only-do-not-override-m4timi).ant-input {
-  padding: 10px 12px;
+    padding: 10px 12px;
 }
 
 :where(.css-dev-only-do-not-override-m4timi).ant-input-affix-wrapper {
-  padding: 10px 12px;
+    padding: 10px 12px;
 }
 
 :where(.css-dev-only-do-not-override-m4timi).ant-btn-primary {
-  background: #ec7241;
-  padding: 20px 62px;
+    background: #ec7241;
+    padding: 20px 62px;
 }
 
-:where(.css-dev-only-do-not-override-m4timi).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover{
+:where(.css-dev-only-do-not-override-m4timi).ant-btn-primary:not(:disabled):not(
+        .ant-btn-disabled
+    ):hover {
     background: #f56831;
+}
+
+.nav_bar {
+    width: 80%;
+    padding: 10px 28px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.nav_bar_list {
+    display: flex;
+    align-items: center;
+    column-gap: 48px;
+    list-style: none;
 }
